--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -42,6 +42,8 @@ $header-font-family: 'Bebas Neue', arial, sans-serif;
 
 $colour-text: #222;
 
+$pageBg: #fafafa;
+
 $colour-link: #5c9bbf;
 $colour-link-hover: color.adjust($colour-link, $lightness: 10%);
 
