--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: https://byintention.co
 Description: Design by Arka, Wordpress theme by Nick at Intention, plugins by Lifetap
 Author: Nick "Badger" Hayward
 Author URI: https://byintention.co
-Version: 1.16
+Version: 1.17
 Tags: 
 License: GPL3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -1318,7 +1318,7 @@ body.mobilenavopen {
 }
 
 .shadow {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .padded {
@@ -1723,12 +1723,28 @@ body.mobilenavopen {
 }
 
 /* Blog section */
-.postmetadata {
+.archive,
+.blog {
+  padding-top: 100px;
+}
+.archive .contentWrap,
+.blog .contentWrap {
   background: #fafafa;
-  border: 1px solid #eee;
-  font-size: 12px;
+  padding-top: 40px;
+}
+.archive .post,
+.blog .post {
   margin-bottom: 40px;
-  padding: 5px 10px;
+}
+.archive .news-thumb img,
+.blog .news-thumb img {
+  width: 100%;
+}
+
+.postmetadata {
+  border-top: 1px solid #eee;
+  font-size: 12px;
+  padding: 5px;
 }
 .postmetadata span {
   display: inline-block;
@@ -1768,16 +1784,24 @@ body.mobilenavopen {
 #sidebar {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 20px;
 }
 #sidebar #submit {
   float: left;
   margin-left: 5px;
 }
+#sidebar #s {
+  border: 1px solid #ccc;
+}
+#sidebar #searchsubmit {
+  background: #5c9bbf;
+  color: #fff;
+}
 #sidebar > li {
-  background: #eee;
-  margin: 0 0 20px 0;
-  padding: 10px;
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 0 0 40px 0;
+  padding: 20px;
 }
 #sidebar li li {
   margin: 0;
