styling wiki and news

--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -42,7 +42,7 @@ $header-font-family: 'Bebas Neue', arial, sans-serif;
 
 $colour-text: #222;
 
-$pageBg: #fafafa;
+$pageBg: #eee;
 
 $colour-link: #5c9bbf;
 $colour-link-hover: color.adjust($colour-link, $lightness: 10%);
