--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2166,14 +2166,19 @@ html {
 	
 	// Single event
 	.single-tribe_events {
-		padding-top:95px;
+		
 		
 		.contentWrap {
 			background: #fafafa;
 		}
 		
+		.tribe-events-back {
+			display: none;
+		}
+		
 		#tribe-events-pg-template {
 			max-width:800px;
+			padding-top:135px;
 			
 			.tribe-events-schedule h2 {
 				font-size:20px;
@@ -2211,7 +2216,6 @@ html {
 
 		.tcb_briefing {
 			background: #fff;
-			box-shadow: 0 0 10px rgba(0,0,0,0.07);
 			margin-bottom: 30px;
 			padding:30px;
 			h3 {
@@ -2331,7 +2335,6 @@ html {
 	.tribe-common-g-row.tribe-events-calendar-latest-past__event-row {
 		align-items: flex-start;
 		background: #fff;
-		box-shadow: 0 0 10px rgba(0,0,0,0.07);
 		padding: 30px;
 		.tribe-events-calendar-list__event-date-tag,
 		.tribe-events-calendar-latest-past__event-date-tag {
