--- a/style.css
+++ b/style.css
@@ -2187,14 +2187,15 @@ html .wcpt-product-form select {
 html .post-type-archive-tribe_events {
   padding-top: 95px;
 }
-html .single-tribe_events {
-  padding-top: 95px;
-}
 html .single-tribe_events .contentWrap {
   background: #fafafa;
 }
+html .single-tribe_events .tribe-events-back {
+  display: none;
+}
 html .single-tribe_events #tribe-events-pg-template {
   max-width: 800px;
+  padding-top: 135px;
 }
 html .single-tribe_events #tribe-events-pg-template .tribe-events-schedule h2 {
   font-size: 20px;
@@ -2221,7 +2222,6 @@ html .single-tribe_events #tribe-events-pg-template .tribe-events-schedule h2 {
 }
 html .single-tribe_events .tcb_briefing {
   background: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.07);
   margin-bottom: 30px;
   padding: 30px;
 }
@@ -2310,7 +2310,6 @@ html .tribe-common-g-row.tribe-events-calendar-list__event-row,
 html .tribe-common-g-row.tribe-events-calendar-latest-past__event-row {
   align-items: flex-start;
   background: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.07);
   padding: 30px;
 }
 html .tribe-common-g-row.tribe-events-calendar-list__event-row .tribe-events-calendar-list__event-date-tag,
